Refactor/mudanca modelo bd (#77)
* feat: Refatora modelo de dados para Usuario, Contrato e Localidade

* corrige o metodo de bater ponto e adiciona api de localização

* chore: WIP refactor sync before rebase

* Enhance README with updated project and API details

Refine project description and API documentation for clarity and detail.
