# internal/domain/usuario/handler.go
@@ -8,6 +8,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 	"net/http"
+	"time"
 )
 
 type UsuarioHandler struct {
@@ -23,12 +24,18 @@ func NewUsuarioHandler(s UsuarioService, f funcoes.FuncoesInterface) *UsuarioHan
 }
 
 type CriarUsuarioRequest struct {
-	Nome      string `json:"nome" binding:"required" example:"João Silva"`
-	Email     string `json:"email" binding:"required,email" example:"joao.silva@empresa.com"`
-	Senha     string `json:"senha" binding:"required,min=6" example:"senha123"`
-	EmpresaID uint   `json:"empresa_id" binding:"required" example:"1"`
-	CargoID   uint   `json:"cargo_id,omitempty" example:"2"` 
-	CargoNome string `json:"cargo_nome,omitempty" example:"Funcionário"`
+    // Dados do Usuário (Pessoa)
+    Nome  string `json:"nome" binding:"required"`
+    CPF   string `json:"cpf" binding:"required"`
+    Email string `json:"email" binding:"required,email"`
+    Senha string `json:"senha" binding:"required,min=6"`
+
+    // Dados do Contrato
+    EmpresaID    uint      `json:"empresa_id" binding:"required"`
+    LocalidadeID uint      `json:"localidade_id" binding:"required"`
+    CargoID      uint      `json:"cargo_id" binding:"required"`
+    Salario      float64   `json:"salario" binding:"required"`
+    DataAdmissao time.Time `json:"data_admissao" binding:"required"`
 }
 
 // UpdateUsuarioRequest define o corpo do pedido para atualizar um usuário.
@@ -101,27 +108,26 @@ func (h *UsuarioHandler) GetAllUsuariosHandler(c *gin.Context) {
 // @Failure      404  {object}  map[string]string
 // @Router       /usuarios/{id} [delete]
 func (h *UsuarioHandler) DeleteHandler(c *gin.Context) {
-
 	empresaID, _ := h.converter.GetUintIDFromContext(c, "empresaID")
 	idToken, _ := h.converter.GetUintIDFromContext(c, "userID")
 	idUrl, _ := h.converter.StrParaUint(c.Param("id"))
 
 	requester, err := h.service.FindByID(idToken, empresaID)
-	if err != nil {
-		c.JSON(http.StatusForbidden, gin.H{"error": "Acesso negado."})
+	if err != nil || requester.Contrato.ID == 0 || requester.Contrato.Cargo.ID == 0 {
+		c.JSON(http.StatusForbidden, gin.H{"error": "Acesso negado. Não foi possível verificar as suas permissões."})
 		return
 	}
 
 	podeDeletar := false
 	if idUrl == idToken {
-		for _, p := range requester.Cargo.Permissoes {
+		for _, p := range requester.Contrato.Cargo.Permissoes {
 			if p.Nome == permissions.DELETAR_PROPRIA_CONTA {
 				podeDeletar = true
 				break
 			}
 		}
 	} else {
-		for _, p := range requester.Cargo.Permissoes {
+		for _, p := range requester.Contrato.Cargo.Permissoes {
 			if p.Nome == permissions.DELETAR_USUARIO {
 				podeDeletar = true
 				break
@@ -154,34 +160,33 @@ func (h *UsuarioHandler) DeleteHandler(c *gin.Context) {
 // @Produce      json
 // @Security     BearerAuth
 // @Param        id       path      int                  true  "ID do Usuário a ser atualizado"
-// @Param        dados    body      UpdateUsuarioRequest true  "Dados para atualização" // <-- Usamos a struct aqui para o Swagger
+// @Param        dados    body      UpdateUsuarioRequest true  "Dados para atualização"
 // @Success      204      "No Content"
 // @Failure      400      {object}  map[string]string
 // @Failure      403      {object}  map[string]string
 // @Failure      404      {object}  map[string]string
 // @Router       /usuarios/{id} [put]
 func (h *UsuarioHandler) UpdateUsuarioHandler(c *gin.Context) {
-
 	empresaID, _ := h.converter.GetUintIDFromContext(c, "empresaID")
 	idToken, _ := h.converter.GetUintIDFromContext(c, "userID")
 	idUrl, _ := h.converter.StrParaUint(c.Param("id"))
 
 	requester, err := h.service.FindByID(idToken, empresaID)
-	if err != nil {
-		c.JSON(http.StatusForbidden, gin.H{"error": "Acesso negado."})
+	if err != nil || requester.Contrato.ID == 0 || requester.Contrato.Cargo.ID == 0 {
+		c.JSON(http.StatusForbidden, gin.H{"error": "Acesso negado. Não foi possível verificar as suas permissões."})
 		return
 	}
 
 	podeEditar := false
 	if idUrl == idToken {
-		for _, p := range requester.Cargo.Permissoes {
+		for _, p := range requester.Contrato.Cargo.Permissoes {
 			if p.Nome == permissions.EDITAR_PROPRIA_CONTA {
 				podeEditar = true
 				break
 			}
 		}
 	} else {
-		for _, p := range requester.Cargo.Permissoes {
+		for _, p := range requester.Contrato.Cargo.Permissoes {
 			if p.Nome == permissions.EDITAR_USUARIO {
 				podeEditar = true
 				break
@@ -199,11 +204,14 @@ func (h *UsuarioHandler) UpdateUsuarioHandler(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Corpo da requisição (JSON) inválido"})
 		return
 	}
-
-	if idUrl == idToken {
-		delete(dadosParaAtualizar, "cargo_id")
-	}
+    
+    // Remove campos que não devem ser atualizados diretamente nesta rota
+	delete(dadosParaAtualizar, "cargo_id")
 	delete(dadosParaAtualizar, "empresa_id")
+    delete(dadosParaAtualizar, "localidade_id")
+    delete(dadosParaAtualizar, "salario")
+    delete(dadosParaAtualizar, "data_admissao")
+
 
 	err = h.service.Update(idUrl, empresaID, dadosParaAtualizar)
 	if err != nil {
@@ -219,36 +227,37 @@ func (h *UsuarioHandler) UpdateUsuarioHandler(c *gin.Context) {
 }
 
 // @Summary      Cria um novo usuário
-// @Description  Cria um novo usuário (funcionário) no sistema.
+// @Description  Cria um novo usuário (funcionário) e seu contrato de trabalho no sistema.
 // @Tags         Usuários
 // @Accept       json
 // @Produce      json
-// @Param        usuario  body      CriarUsuarioRequest  true  "Dados do Novo Usuário"
+// @Param        usuario  body      CriarUsuarioRequest  true  "Dados do Novo Usuário e Contrato"
 // @Success      201      {object}  model.Usuario
 // @Failure      400      {object}  map[string]string
 // @Router       /usuarios [post]
 func (h *UsuarioHandler) CriarUsuarioHandler(c *gin.Context) {
-
-	var request CriarUsuarioRequest
-	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	if (request.CargoID == 0 && request.CargoNome == "") || (request.CargoID != 0 && request.CargoNome != "") {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Forneça apenas 'cargo_id' ou 'cargo_nome', mas não ambos ou nenhum."})
-		return
-	}
-
-    usuario := model.Usuario{
-        Nome:      request.Nome,
-        Email:     request.Email,
-        Senha:     request.Senha,
-        EmpresaID: request.EmpresaID,
-        CargoID:   request.CargoID,
+    var request CriarUsuarioRequest
+    if err := c.ShouldBindJSON(&request); err != nil {
+        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+        return
     }
 
-    err := h.service.CriarUsuario(&usuario, request.CargoNome)
+    usuario := &model.Usuario{
+        Nome:  request.Nome,
+        CPF:   request.CPF,
+        Email: request.Email,
+        Senha: request.Senha,
+    }
+
+    contrato := &model.Contrato{
+        EmpresaID:    request.EmpresaID,
+        LocalidadeID: request.LocalidadeID,
+        CargoID:      request.CargoID,
+        Salario:      request.Salario,
+        DataAdmissao: request.DataAdmissao,
+    }
+
+    err := h.service.CriarUsuarioEContrato(usuario, contrato)
     if err != nil {
         c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
         return
