# internal/model/empresa.go
@@ -1,9 +1,9 @@
 package model
 
 type Empresa struct {
-	ID                 uint    `gorm:"primaryKey" json:"id"`
-	Nome               string  `gorm:"not null" json:"nome"`
-	SedeLatitude       float64 `json:"sedeLatitude"`
-	SedeLongitude      float64 `json:"sedeLongitude"`
-	RaioGeofenceMetros float64 `json:"raioGeofenceMetros"`
+    ID          uint         `gorm:"primaryKey" json:"id"`
+    NomeFantasia string       `gorm:"not null" json:"nome_fantasia"`
+    RazaoSocial string       `gorm:"not null" json:"razao_social"`
+    CNPJ        string       `gorm:"unique;not null" json:"cnpj"`
+    Localidades []Localidade `gorm:"foreignKey:EmpresaID" json:"localidades,omitempty"`
 }
